--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     <div id="visual">
         <div class="visual_w">
             <div class="visual_t">
-                <h2>Haekong<br>Playground</h2>
-                <p>찾아주신 여러분, 환영합니다...!<br>그리고 만들고, 그리고 만들고<br>저의 놀이터랍니다</p>
+                <h2>Haekong</h2>
             </div>
         </div>
 
